upd: assets task, links

--- a/src/app/html/pages/account--create.hbs
+++ b/src/app/html/pages/account--create.hbs
@@ -9,7 +9,7 @@
 
     <h2 class="infinite-title text-center ">Create Account</h2>
     <form class="infinite-form infinite-form-validation" novalidate>
-      <a class="infinite-link-dark login-link" href='login.html'>I Already Have an Account</a>
+      <a class="infinite-link-dark login-link" href='account--login.html'>I Already Have an Account</a>
       <div class="form-group">
         <input type="text" name="Name" class="form-control form-field" id="exampleInputName"
                aria-describedby="nameHelp" placeholder="Name" required>
