--- a/src/app/html/pages/account--login.hbs
+++ b/src/app/html/pages/account--login.hbs
@@ -9,7 +9,7 @@
 
     <h2 class="infinite-title text-center ">Login</h2>
     <form class="infinite-form infinite-form-validation" novalidate>
-      <a class="infinite-link-dark login-link" href='create-account.html'>Create Account</a>
+      <a class="infinite-link-dark login-link" href='account--create.html'>Create Account</a>
       <div class="form-group">
         <input type="email" class="form-control form-field" id="exampleInputEmail1"
                aria-describedby="emailHelp" placeholder="E-mail" required>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <button type="submit" class="infinite-button login-button">Login</button>
-      <a class="infinite-button login-button login-light-button" href='lost-password.html'>I Forgot E-mail or
+      <a class="infinite-button login-button login-light-button" href='account--reset-password.html'>I Forgot E-mail or
         Password</a>
     </form>
 
