--- a/src/app/html/pages/account--reset-password.hbs
+++ b/src/app/html/pages/account--reset-password.hbs
@@ -20,8 +20,8 @@
     </div>
 
     <button type="submit" class="infinite-button login-button lost-button">Get New Password</button>
-    <a class="form-text align-self-start" href='login.html'>Log In</a>
-    <a class="form-text align-self-start" href='home.html'>&#8592; Back to Infinite Selection</a>
+    <a class="form-text align-self-start" href="account--login.html">Log In</a>
+    <a class="form-text align-self-start" href="home.html">&#8592; Back to Infinite Selection</a>
   </form>
 
 </section>
