--- a/src/app/html/pages/home.hbs
+++ b/src/app/html/pages/home.hbs
@@ -14,7 +14,7 @@
           <p class="description-text">
             Rent Collectable Sneakers From Top Brands Like Nike, Air Jordan, Adidas and More
           </p>
-          <a href='browse-sneakers.html' class="infinite-button mx-auto mx-lg-0">Rent Now</a>
+          <a href="browse-sneakers.html" class="infinite-button mx-auto mx-lg-0">Rent Now</a>
         </div>
       </div>
       <div class="col-lg-8 col-xl-7 order-1 order-lg-2 animate-container">
@@ -29,7 +29,7 @@
         <h3 class="infinite-header">
           New Releases
         </h3>
-        <a class="infinite-link-dark" href='browse-sneakers.html'>View All</a>
+        <a class="infinite-link-dark" href="browse-sneakers.html">View All</a>
       </div>
       <div class="col-12 releases-container">
         {{#each home.products}}
@@ -46,7 +46,7 @@
             We Feel You, No One Should Ever Spend Money On Fake Sneakers.
             Or Have To Spend Hundreds To Rock The Real Ones.
           </h2>
-          <a href='authenticity-guarantee.html' class="button-white infinite-button">Authenticity
+          <a href="authenticity-guarantee.html" class="button-white infinite-button">Authenticity
             Guarantee</a>
         </div>
       </div>
@@ -57,13 +57,13 @@
       How we clean
     </h2>
     <img class="clean-image" src="../assets/images/homepage-section/section-clean.jpg" alt="How we clean">
-    <a href='how-we-clean.html' class="infinite-link mx-auto mx-lg-0">Learn More</a>
+    <a href="how-we-clean.html" class="infinite-link mx-auto mx-lg-0">Learn More</a>
   </section>
   <section class="action">
     <h2 class="action-text infinite-title">
       Same Sneakers, Better Prices
     </h2>
-    <a href='browse-sneakers.html' class="infinite-button action-link">Rent Now</a>
+    <a href="browse-sneakers.html" class="infinite-button action-link">Rent Now</a>
     <img class="action-image" src="../assets/images/homepage-section/section-action.png" alt="How we clean">
   </section>
   <article class="work-cycle">
@@ -127,8 +127,8 @@
               </ul>
             </div>
             <div class="advantages-item-action">
-              <a href='browse-sneakers.html' class="infinite-button advantages-button">Rent Now</a>
-              <a href='ways-to-rent.html' class="infinite-link">Learn More</a>
+              <a href="browse-sneakers.html" class="infinite-button advantages-button">Rent Now</a>
+              <a href="ways-to-rent.html" class="infinite-link">Learn More</a>
             </div>
 
           </div>
@@ -151,8 +151,8 @@
               </ul>
             </div>
             <div class="advantages-item-action">
-              <a href='browse-sneakers.html' class="infinite-button advantages-button">Rent Now</a>
-              <a href='ways-to-rent.html' class="infinite-link">Learn More</a>
+              <a href="browse-sneakers.html" class="infinite-button advantages-button">Rent Now</a>
+              <a href="ways-to-rent.html" class="infinite-link">Learn More</a>
             </div>
 
           </div>
@@ -184,7 +184,7 @@
             </div>
             <p class="infinite-text text-grey">
               Amazing sneakers! Adidas Continental 80 is very well-made.
-              I have rented it for 3 months and very happy. It's so soft,
+              I have rented it for 3 months and very happy. It"s so soft,
               comfortable and high quality.
             </p>
           </div>
@@ -201,7 +201,7 @@
               </p>
             </div>
             <p class="infinite-text text-grey">
-              I'm so exited of my rental. Sneakers is comfortable, refreshing,
+              I"m so exited of my rental. Sneakers is comfortable, refreshing,
               funky, and smart-looking. Thank you for good service!
             </p>
           </div>
@@ -218,7 +218,7 @@
               </p>
             </div>
             <p class="infinite-text text-grey">
-              Thank you for the quality sneakers and amazing service. I'm satisfied
+              Thank you for the quality sneakers and amazing service. I"m satisfied
               and happy with my rental and will rent again.
             </p>
           </div>
@@ -229,9 +229,9 @@
   </article>
   <section class="action-2">
     <h2 class="infinite-title action-2-text">
-      Become the Sneakerhead You've Always Dreamed of
+      Become the Sneakerhead You"ve Always Dreamed of
     </h2>
-    <a href='browse-sneakers.html' class="infinite-button action-2-link">Rent Now</a>
+    <a href="browse-sneakers.html" class="infinite-button action-2-link">Rent Now</a>
     <img class="action-2-image" src="../assets/images/homepage-section/section-action-2.png" alt="Lucky You Are!">
   </section>
 </main>
