--- a/src/app/html/partials/blocks/header.hbs
+++ b/src/app/html/partials/blocks/header.hbs
@@ -26,7 +26,7 @@
       </nav>
       <div class="header-main__actions">
         <div class="header-main__actions-item">
-          <a class="btn-inline" href="login.html">Login</a>
+          <a class="btn-inline" href="account--login.html">Login</a>
         </div>
         <div class="header-main__actions-item _ml-1">
           <a href="search.html" class="btn-icon">
