--- a/src/app/html/partials/blocks/footer-link.hbs
+++ b/src/app/html/partials/blocks/footer-link.hbs
@@ -1,1 +1,3 @@
-{{#if current}}{{else}}<a class="footer-link" href="{{url}}">{{name}}</a>{{/if}}
+{{#if current}}
+{{else}}<li><a class="footer-nav__link" href="{{url}}">{{name}}</a></li>
+{{/if}}
