--- a/src/app/html/partials/blocks/header.hbs
+++ b/src/app/html/partials/blocks/header.hbs
@@ -8,11 +8,11 @@
       </div>
       <div class="header-main__brand">
         {{#ifCond page "home"}}
-          <span class="header-main__brand-logo">
+          <span class="page-logo">
             <img src="../assets/images/logo/logo-black.svg" alt="Our logo">
           </span>
         {{else}}
-          <a class="header-main__brand-logo" href="home.html">
+          <a class="page-logo" href="home.html">
             <img src="../assets/images/logo/logo-black.svg" alt="Our logo">
           </a>
         {{/ifCond}}
