--- a/src/app/styles/blocks/_index.scss
+++ b/src/app/styles/blocks/_index.scss
@@ -2,3 +2,6 @@
 @import "menu-item";
 @import "btn-inline";
 @import "btn-icon";
+@import "page-logo";
+@import "footer-nav";
+@import "footer-socials";
