--- a/src/app/styles/layout/footer.scss
+++ b/src/app/styles/layout/footer.scss
@@ -1,164 +1,68 @@
-/* Общие стили для подвала */
-
-.footer {
+.footer-main {
   color: #777777;
   background: #0a0a0a;
-}
 
-.footer-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 40px 0;
-}
+  &__container {
+    padding-top: 40px;
+    padding-bottom: 40px;
 
-.footer-logo-link,
-.footer-logo {
-  height: 100%;
-}
-
-/* Стилизация меню футера */
-
-.footer-menu {
-  margin: 0;
-  padding: 0;
-}
-
-.footer-nav {
-  display: grid;
-  grid-template-rows: 55.2px;
-  grid-template-columns: repeat(4, max-content);
-  align-content: center;
-  justify-content: center;
-  /* flex-wrap: wrap; */
-}
-
-.footer-link {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  padding: 0 10px;
-  color: #7e7e7e;
-  font-weight: 500;
-  font-size: 14px;
-  transition: all 0.3s ease-out;
-}
-
-.footer-link:hover {
-  color: #d3d3d3;
-}
-
-@media screen and (max-width: 992px) {
-  .footer-container {
-    padding: 70px 0 40px;
+    @include media(tabletSmall) {
+      padding-top: 70px;
+    }
   }
 
-  .footer-nav {
-    margin: 20px 0;
-  }
-}
-
-@media screen and (max-width: 382px) {
-  .footer-nav {
-    grid-template-rows: repeat(2, 45.2px);
-    grid-template-columns: repeat(2, max-content);
-    margin: 40px 0;
-    text-align: center;
-  }
-
-  .footer-link {
-    justify-content: center;
-  }
-}
-
-/* Сслыки на социальные сети */
-
-.footer-socials {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.socials-container {
-  display: flex;
-  justify-content: flex-end;
-  text-align: center;
-}
-
-.social-link {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  margin-bottom: 10px;
-  overflow: hidden;
-  color: #7e7e7e;
-  border-radius: 30%;
-  box-shadow: 0 5px 15px -5px #00000070;
-}
-
-.social-link:nth-child(2) {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.social-link i {
-  font-size: 24px;
-  line-height: 40px;
-  transition: 0.2s linear;
-}
-
-.social-link:hover i {
-  // color: #f1f1f1;
-  color: #0b0b0b;
-  transform: scale(1.2);
-}
-
-.social-link::before {
-  position: absolute;
-  top: 90%;
-  left: -110%;
-  width: 120%;
-  height: 120%;
-  background-color: #7e7e7e;
-  transform: rotate(45deg);
-  content: "";
-}
-
-.social-link:hover::before {
-  top: -10%;
-  left: -10%;
-  animation: socialsIconHover 0.7s 1;
-}
-
-@keyframes socialsIconHover {
-  0% {
-    top: 90%;
-    left: -110%;
-  }
-
-  50% {
-    top: -30%;
-    left: 10%;
-  }
-
-  100% {
-    top: -10%;
-    left: -10%;
-  }
-}
-
-.footer-text {
-  margin-bottom: 0;
-  font-weight: 500;
-  font-size: 11px;
-}
-
-@media screen and (max-width: 992px) {
-  .footer-logo-container,
-  .footer-socials {
-    display: flex;
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
-    justify-content: center;
+
+    @include media(tabletSmall) {
+      grid-template-columns: 1fr;
+      grid-gap: 40px;
+    }
+  }
+
+  &__logo {
+    @include media(tabletSmall) {
+      justify-self: center;
+    }
+  }
+
+  &__bottom {
+  }
+
+  &__socials {
+    @include media(tabletSmall, up) {
+      justify-content: flex-end;
+    }
+
+    @include media(tabletSmall) {
+      justify-content: center;
+    }
+  }
+
+  &__copyright {
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-weight: 500;
+    font-size: 11px;
+
+    @include media(tabletSmall, up) {
+      text-align: right;
+    }
+
+    @include media(tabletSmall) {
+      text-align: center;
+    }
+
+    a {
+      transition: color 350ms ease;
+      color: inherit;
+
+      &:focus,
+      &:hover {
+        color: #fafafa;
+      }
+    }
   }
 }
