upd: product-card includes

--- a/src/app/html/pages/search.hbs
+++ b/src/app/html/pages/search.hbs
@@ -1,12 +1,10 @@
 {{!Search}}
 
 {{> layout/head page-title="Infinite Selection - Search Page"}}
-{{> blocks/header page="home" nav-menu=nav.header.home}}
+{{> blocks/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
-
   <section class="container search">
-
     <form class="search-form">
       <div class="form-group search-input-container">
         <input type="text" class="form-control search-input" id="exampleInputText"
@@ -14,206 +12,23 @@
       </div>
       <button type="submit" class="button-search mx-auto">Submit</button>
     </form>
-
     <div class="row search-section">
       <div class="col-12 sneakers-browse-container">
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
-            <p class="releases-title">Nike Air 98</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
-            <p class="releases-title">Adidas 300</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
-            <p class="releases-title">Balenciaga</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
-            <p class="releases-title">Nike GodFear</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
-            <p class="releases-title">Puma Seventies</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
-            <p class="releases-title">Puma Nineties</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
-            <p class="releases-title">Balenciaga</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="browse-item">
-          <a href='example.html' class="browse-item-link">
-            <img class="browse-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
+        {{#each home.products}}
+          {{>blocks/product-card}}
+        {{/each}}
+        {{#each product-single.products}}
+          {{>blocks/product-card}}
+        {{/each}}
+        {{#each home.products}}
+          {{>blocks/product-card}}
+        {{/each}}
+        {{#each product-single.products}}
+          {{>blocks/product-card}}
+        {{/each}}
       </div>
     </div>
-
   </section>
-
 </main>
 
 {{> blocks/footer }}
