--- a/src/app/styles/pages/search.scss
+++ b/src/app/styles/pages/search.scss
@@ -59,7 +59,8 @@
 
 .sneakers-browse-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 0 20px;
   margin: 0;
 }
 
