--- a/src/app/html/pages/browse-sneakers.hbs
+++ b/src/app/html/pages/browse-sneakers.hbs
@@ -7,9 +7,7 @@
   <article class="container browse">
     <div class="row">
       <section class="col-12 col-md-8 col-lg-6 col-xl-3 browse-filter">
-        <h3 class="infinite-text-title browse-top-line">
-          Filters
-        </h3>
+        <h3 class="infinite-text-title browse-top-line">Filters</h3>
         <div class="filter-brands">
           <h4 class="infinite-header-small">Brands</h4>
           <div class="btn-group btn-group-toggle browse-select" data-toggle="buttons">
@@ -80,206 +78,22 @@
       </section>
       <section class="col-12 col-xl-9 browse-main">
         <div class="col-12 browse-main-top browse-top-line">
-          <h1 class="infinite-header">
-            Browse Sneakers
-          </h1>
-          <p class="infinite-text">
-            24 Result
-          </p>
+          <h1 class="infinite-header">Browse Sneakers</h1>
+          <p class="infinite-text">24 Result</p>
         </div>
         <div class="col-12 sneakers-browse-container">
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-7.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-8.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-9.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-10.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-11.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
-          <div class="browse-item">
-            <a href="example.html" class="browse-item-link">
-              <img class="browse-image" src="../assets/images/releases/releases-12.png" alt="sneakers">
-              <p class="releases-title">Adidas Yeezy 500</p>
-              <p class="releases-value">&#36;330 Value</p>
-              <p class="releases-cost">&#36;130</p>
-            </a>
-          </div>
+          {{#each home.products}}
+            {{>blocks/product-card}}
+          {{/each}}
+          {{#each product-single.products}}
+            {{>blocks/product-card}}
+          {{/each}}
+          {{#each home.products}}
+            {{>blocks/product-card}}
+          {{/each}}
+          {{#each product-single.products}}
+            {{>blocks/product-card}}
+          {{/each}}
         </div>
       </section>
     </div>
