changing folder structure, upd header

--- a/src/app/html/pages/404.hbs
+++ b/src/app/html/pages/404.hbs
@@ -1,7 +1,7 @@
 {{!404 - Not found}}
 
 {{> layout/head page-title="Infinite Selection - Not found"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
   <section class="container layout-404 ">
@@ -19,5 +19,5 @@
   </section>
 </main>
 
-{{> blocks/footer }}
+{{> blocks/footer/footer }}
 {{> layout/bottom }}
