--- a/src/app/html/pages/account--create.hbs
+++ b/src/app/html/pages/account--create.hbs
@@ -1,7 +1,7 @@
 {{!Create Account}}
 
 {{> layout/head page-title="Infinite Selection - Create Account"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
 
@@ -100,5 +100,5 @@
 
 </main>
 
-{{> blocks/footer }}
+{{> blocks/footer/footer }}
 {{> layout/bottom }}
