--- a/src/app/html/pages/account--login.hbs
+++ b/src/app/html/pages/account--login.hbs
@@ -1,7 +1,7 @@
 {{!Login}}
 
 {{> layout/head page-title="Infinite Selection - LogIn Page"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
 
@@ -44,5 +44,5 @@
 
 </main>
 
-{{> blocks/footer footer-nav=nav.footer.terms}}
+{{> blocks/footer/footer footer-nav=nav.footer.terms}}
 {{> layout/bottom }}
