--- a/src/app/html/pages/privacy-policy.hbs
+++ b/src/app/html/pages/privacy-policy.hbs
@@ -1,7 +1,7 @@
 {{!Privacy Policy}}
 
 {{> layout/head page-title="Infinite Selection - Privacy Policy"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
 
@@ -219,5 +219,5 @@
 
 </main>
 
-{{> blocks/footer footer-nav=nav.footer.privacy}}
+{{> blocks/footer/footer footer-nav=nav.footer.privacy}}
 {{> layout/bottom }}
