--- a/src/app/html/partials/blocks/footer/footer.hbs
+++ b/src/app/html/partials/blocks/footer/footer.hbs
@@ -11,11 +11,11 @@
           <ul class="footer-nav__list">
             {{#if footer-nav}}
               {{#each footer-nav}}
-                {{>blocks/footer-link}}
+                {{>blocks/footer/footer-link}}
               {{/each}}
             {{else}}
               {{#each nav.footer.default}}
-                {{>blocks/footer-link}}
+                {{>blocks/footer/footer-link}}
               {{/each}}
             {{/if}}
           </ul>
