--- a/src/app/html/pages/authenticity-guarantee.hbs
+++ b/src/app/html/pages/authenticity-guarantee.hbs
@@ -1,7 +1,7 @@
 {{!Authenticity Guarantee}}
 
 {{> layout/head page-title="Infinite Selection - Authenticity Guarantee"}}
-{{> blocks/header nav-menu=nav.header.authenticity}}
+{{> blocks/header/header nav-menu=nav.header.authenticity}}
 <main class="page-content__main">
   <section class="authenticity-container container">
     <div class="row">
@@ -44,5 +44,5 @@
     <img class="action-image" src="../assets/images/other/authenticity-action-image.png" alt="Just Do It">
   </section>
 </main>
-{{> blocks/footer }}
+{{> blocks/footer/footer }}
 {{> layout/bottom }}
