--- a/src/app/html/pages/how-we-clean.hbs
+++ b/src/app/html/pages/how-we-clean.hbs
@@ -1,7 +1,7 @@
 {{!How We Clean}}
 
 {{> layout/head page-title="Infinite Selection - How We Clean"}}
-{{> blocks/header nav-menu=nav.header.clean}}
+{{> blocks/header/header nav-menu=nav.header.clean}}
 
 <main class="page-content__main">
   <article class="container cleaning">
@@ -101,5 +101,5 @@
   </article>
 </main>
 
-{{> blocks/footer }}
+{{> blocks/footer/footer }}
 {{> layout/bottom }}
