--- a/src/app/html/pages/product-single.hbs
+++ b/src/app/html/pages/product-single.hbs
@@ -1,7 +1,7 @@
 {{!Sneakers Example}}
 
 {{> layout/head page-title="Infinite Selection - Sneakers Example"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
 
@@ -126,14 +126,14 @@
     </div>
     <div class="col-12 releases-container">
       {{#each product-single.products}}
-        {{>blocks/product-card}}
+        {{>blocks/shared/product-card}}
       {{/each}}
     </div>
   </section>
 
 </main>
 
-{{> blocks/footer }}
+{{> blocks/footer/footer }}
 
 <!-- Custom JS -->
 <script>
