--- a/src/app/html/pages/search.hbs
+++ b/src/app/html/pages/search.hbs
@@ -1,7 +1,7 @@
 {{!Search}}
 
 {{> layout/head page-title="Infinite Selection - Search Page"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
   <section class="container search">
@@ -15,21 +15,21 @@
     <div class="row search-section">
       <div class="col-12 sneakers-browse-container">
         {{#each home.products}}
-          {{>blocks/product-card}}
+          {{>blocks/shared/product-card}}
         {{/each}}
         {{#each product-single.products}}
-          {{>blocks/product-card}}
+          {{>blocks/shared/product-card}}
         {{/each}}
         {{#each home.products}}
-          {{>blocks/product-card}}
+          {{>blocks/shared/product-card}}
         {{/each}}
         {{#each product-single.products}}
-          {{>blocks/product-card}}
+          {{>blocks/shared/product-card}}
         {{/each}}
       </div>
     </div>
   </section>
 </main>
 
-{{> blocks/footer }}
+{{> blocks/footer/footer }}
 {{> layout/bottom }}
