--- a/src/app/html/pages/terms-of-service.hbs
+++ b/src/app/html/pages/terms-of-service.hbs
@@ -1,7 +1,7 @@
 {{!Terms of Service}}
 
 {{> layout/head page-title="Infinite Selection - Terms of Service"}}
-{{> blocks/header nav-menu=nav.header.home}}
+{{> blocks/header/header nav-menu=nav.header.home}}
 
 <main class="page-content__main">
 
@@ -648,5 +648,5 @@
 
 </main>
 
-{{> blocks/footer footer-nav=nav.footer.terms}}
+{{> blocks/footer/footer footer-nav=nav.footer.terms}}
 {{> layout/bottom }}
