--- a/src/app/styles/shared/core.scss
+++ b/src/app/styles/shared/core.scss
@@ -17,6 +17,10 @@ html {
   font-family: "Roboto", "Arial", sans-serif;
 }
 
+body {
+  line-height: 1.5;
+}
+
 a {
   text-decoration: none !important;
   transition: all 0.3s ease;
