--- a/src/app/html/pages/404.hbs
+++ b/src/app/html/pages/404.hbs
@@ -3,21 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Not found"}}
 {{> blocks/header/header nav-menu=nav.header.home}}
 
-<main class="page-content__main">
-  <section class="container layout-404 ">
-    <div class="text-container-404">
-      <h2 class="infinite-title-main text-center">We lost this page</h2>
-      <p class="infinite-text text-404">
-        We searched high and low but couldn’t find what you’re looking for.
-        Let’s find a better place for you to go.
-      </p>
-      <a href="home.html" class="infinite-button mx-auto">Back to Home</a>
-    </div>
-    <picture class="not-found">
-      <img class="not-found-image" src="../assets/images/other/404.png" alt="404">
-    </picture>
-  </section>
-</main>
+{{> blocks/404/01_content }}
 
 {{> blocks/footer/footer }}
 {{> layout/bottom }}
