add class page-content__indent

--- a/src/app/html/partials/blocks/404/01_content.hbs
+++ b/src/app/html/partials/blocks/404/01_content.hbs
@@ -1,5 +1,5 @@
 
-<main class="page-content__main">
+<main class="page-content__main {{#if indent}} page-content__indent{{/if}}">
   <section class="container-404 layout-404">
     <h2 class="infinite-title-main">We lost this page</h2>
     <p class="infinite-text text-404">
