--- a/src/app/html/pages/404.hbs
+++ b/src/app/html/pages/404.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Not found"}}
 {{> blocks/header/header nav-menu=nav.header.home}}
 
-{{> blocks/404/01_content }}
+{{> blocks/404/01_content indent=true}}
 
 {{> blocks/footer/footer }}
 {{> layout/bottom }}
